--- a/index.html
+++ b/index.html
@@ -292,61 +292,124 @@
             }
         }
 
-        /* Music Player */
-        .music-player {
-            background: linear-gradient(135deg, #1e1e1e, #2d2d2d);
-            border-radius: 20px;
-            padding: 40px;
-            color: white;
+        /* Pre-Music Message */
+        .pre-music-message {
             text-align: center;
+            padding: 40px 20px;
         }
 
-        .music-player h2 {
+        .pre-music-message h2 {
+            color: #764ba2;
             font-size: 2em;
-            margin-bottom: 10px;
-            background: linear-gradient(135deg, #f093fb, #f5576c);
+            margin-bottom: 20px;
+            background: linear-gradient(135deg, #667eea, #764ba2);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
 
-        .music-player p {
-            color: #aaa;
+        .pre-music-message p {
+            color: #555;
+            font-size: 1.3em;
+            line-height: 1.8;
             margin-bottom: 30px;
         }
 
-        .album-art {
-            width: 250px;
-            height: 250px;
-            margin: 0 auto 30px;
+        .pre-music-message .continue-btn {
+            padding: 18px 50px;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 50px;
             background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        .pre-music-message .continue-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.6);
+        }
+
+        /* Music Player - Spotify Style */
+        .music-player {
+            background: linear-gradient(180deg, #121212 0%, #1a1a1a 100%);
             border-radius: 20px;
+            padding: 30px 25px;
+            color: white;
+            text-align: center;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
+        }
+
+        .music-player h2 {
+            font-size: 1.8em;
+            margin-bottom: 8px;
+            color: white;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+        }
+
+        .music-player .artist-name {
+            color: #b3b3b3;
+            margin-bottom: 25px;
+            font-size: 1em;
+            font-weight: 400;
+        }
+
+        .album-art-container {
+            position: relative;
+            width: 100%;
+            max-width: 320px;
+            margin: 0 auto 25px;
+        }
+
+        .album-art {
+            width: 100%;
+            aspect-ratio: 1;
+            border-radius: 12px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 80px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.6);
             position: relative;
             overflow: hidden;
+            background: linear-gradient(135deg, #667eea, #764ba2);
         }
 
-        .visualizer {
+        .album-art img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 12px;
+        }
+
+        .album-art-overlay {
             position: absolute;
             bottom: 0;
             left: 0;
             right: 0;
-            height: 60px;
+            background: linear-gradient(to top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.4) 50%, transparent 100%);
+            padding: 15px;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+        }
+
+        .visualizer {
             display: flex;
             align-items: flex-end;
             justify-content: center;
             gap: 3px;
-            padding: 10px;
+            height: 50px;
         }
 
         .bar {
             width: 4px;
-            background: rgba(255, 255, 255, 0.8);
+            background: linear-gradient(to top, #1db954, #1ed760);
             border-radius: 2px;
             animation: visualize 0.8s ease-in-out infinite;
+            box-shadow: 0 0 10px rgba(29, 185, 84, 0.5);
         }
 
         .bar:nth-child(1) { animation-delay: 0s; }
@@ -354,72 +417,143 @@
         .bar:nth-child(3) { animation-delay: 0.2s; }
         .bar:nth-child(4) { animation-delay: 0.3s; }
         .bar:nth-child(5) { animation-delay: 0.4s; }
-        .bar:nth-child(6) { animation-delay: 0.3s; }
-        .bar:nth-child(7) { animation-delay: 0.2s; }
-        .bar:nth-child(8) { animation-delay: 0.1s; }
+        .bar:nth-child(6) { animation-delay: 0.5s; }
+        .bar:nth-child(7) { animation-delay: 0.4s; }
+        .bar:nth-child(8) { animation-delay: 0.3s; }
+        .bar:nth-child(9) { animation-delay: 0.2s; }
+        .bar:nth-child(10) { animation-delay: 0.1s; }
 
         @keyframes visualize {
             0%, 100% {
-                height: 10px;
+                height: 8px;
             }
             50% {
-                height: 40px;
+                height: 45px;
             }
         }
 
         .progress-container {
-            margin: 20px 0;
+            margin: 25px 0 15px;
         }
 
         .progress-bar {
             width: 100%;
-            height: 6px;
-            background: #444;
+            height: 5px;
+            background: #4d4d4d;
             border-radius: 3px;
             overflow: hidden;
             cursor: pointer;
+            position: relative;
+        }
+
+        .progress-bar:hover {
+            height: 6px;
         }
 
         .progress-fill {
             height: 100%;
-            background: linear-gradient(90deg, #667eea, #764ba2);
+            background: #1db954;
             width: 0%;
             transition: width 0.1s linear;
+            position: relative;
+        }
+
+        .progress-fill::after {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 12px;
+            height: 12px;
+            background: white;
+            border-radius: 50%;
+            opacity: 0;
+            transition: opacity 0.2s;
+        }
+
+        .progress-bar:hover .progress-fill::after {
+            opacity: 1;
         }
 
         .time-info {
             display: flex;
             justify-content: space-between;
-            margin-top: 10px;
-            font-size: 0.9em;
-            color: #aaa;
+            margin-top: 8px;
+            font-size: 0.75em;
+            color: #b3b3b3;
+            font-weight: 400;
         }
 
         .controls {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin-top: 30px;
+            align-items: center;
+            gap: 15px;
+            margin-top: 25px;
         }
 
         .control-btn {
-            width: 60px;
-            height: 60px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             border: none;
-            background: linear-gradient(135deg, #667eea, #764ba2);
-            color: white;
-            font-size: 24px;
+            background: transparent;
+            color: #b3b3b3;
+            font-size: 20px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            transition: all 0.2s ease;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .control-btn:hover {
-            transform: scale(1.1);
-            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.5);
+            color: white;
+            transform: scale(1.05);
+        }
+
+        .control-btn.play-btn {
+            width: 50px;
+            height: 50px;
+            background: white;
+            color: black;
+            font-size: 20px;
+            box-shadow: 0 4px 15px rgba(255, 255, 255, 0.3);
+        }
+
+        .control-btn.play-btn:hover {
+            transform: scale(1.08);
+            box-shadow: 0 6px 20px rgba(255, 255, 255, 0.4);
+        }
+
+        .volume-control {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            margin-top: 20px;
+            color: #b3b3b3;
+        }
+
+        .volume-icon {
+            font-size: 18px;
+        }
+
+        .volume-slider {
+            width: 100px;
+            height: 4px;
+            background: #4d4d4d;
+            border-radius: 2px;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .volume-fill {
+            height: 100%;
+            background: white;
+            width: 70%;
+            border-radius: 2px;
         }
 
         /* Cards Section */
@@ -479,9 +613,25 @@
 
         .swipe-hint {
             text-align: center;
-            margin-top: 20px;
-            color: #999;
-            font-size: 0.9em;
+            margin-top: 30px;
+            color: #764ba2;
+            font-size: 1.3em;
+            font-weight: 600;
+            padding: 15px;
+            background: rgba(118, 75, 162, 0.1);
+            border-radius: 15px;
+            animation: pulse-hint 2s ease-in-out infinite;
+        }
+
+        @keyframes pulse-hint {
+            0%, 100% {
+                transform: scale(1);
+                opacity: 0.8;
+            }
+            50% {
+                transform: scale(1.05);
+                opacity: 1;
+            }
         }
 
         /* Confetti */
@@ -540,9 +690,10 @@
         }
 
         /* Responsive */
-        @media (max-width: 600px) {
+        @media (max-width: 768px) {
             .container {
                 padding: 30px 20px;
+                max-width: 95%;
             }
 
             .intro-section h1 {
@@ -550,12 +701,114 @@
             }
 
             .question-box h2 {
-                font-size: 1.4em;
+                font-size: 1.5em;
+                padding: 0 10px;
             }
 
             .btn {
-                padding: 12px 30px;
+                padding: 14px 35px;
+                font-size: 1.1em;
+            }
+
+            .album-art-container {
+                max-width: 280px;
+            }
+
+            .music-player h2 {
+                font-size: 1.5em;
+            }
+
+            .card {
+                padding: 35px 25px;
+            }
+
+            .card h3 {
+                font-size: 1.5em;
+            }
+
+            .card p {
                 font-size: 1em;
+            }
+
+            .swipe-hint {
+                font-size: 1.2em;
+                padding: 12px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 25px 15px;
+            }
+
+            .intro-section h1 {
+                font-size: 1.8em;
+            }
+
+            .question-box h2 {
+                font-size: 1.3em;
+            }
+
+            .btn {
+                padding: 12px 28px;
+                font-size: 1em;
+            }
+
+            .album-art-container {
+                max-width: 260px;
+            }
+
+            .music-player {
+                padding: 25px 20px;
+            }
+
+            .music-player h2 {
+                font-size: 1.3em;
+            }
+
+            .card {
+                padding: 30px 20px;
+            }
+
+            .card h3 {
+                font-size: 1.3em;
+            }
+
+            .card p {
+                font-size: 0.95em;
+            }
+
+            .card-emoji {
+                font-size: 50px;
+            }
+
+            .swipe-hint {
+                font-size: 1.1em;
+            }
+
+            .final-section h2 {
+                font-size: 2em;
+            }
+
+            .final-section p {
+                font-size: 1em;
+            }
+        }
+
+        /* iPad and tablet specific */
+        @media (min-width: 481px) and (max-width: 1024px) {
+            .container {
+                max-width: 85%;
+                padding: 40px 35px;
+            }
+
+            .album-art-container {
+                max-width: 350px;
+            }
+
+            .swipe-hint {
+                font-size: 1.4em;
+                padding: 18px;
             }
         }
     </style>
@@ -587,22 +840,38 @@
             </div>
         </div>
 
+        <!-- Pre-Music Message Section -->
+        <div class="section pre-music-section">
+            <div class="pre-music-message">
+                <h2>Wait! Before We Continue... 🎵</h2>
+                <p>I have a special song for you. Let it play completely - every second is dedicated to you, my sunshine! ☀️💛</p>
+                <p style="font-size: 1.1em; color: #764ba2; margin-top: 20px;">Ready to feel the love?</p>
+                <button class="continue-btn" onclick="showMusicPlayer()">Play The Song 🎶</button>
+            </div>
+        </div>
+
         <!-- Music Player Section -->
         <div class="section music-section">
             <div class="music-player">
-                <h2>You Are My Sunshine 🌞</h2>
-                <p>A song for my best friend</p>
-                <div class="album-art">
-                    ☀️
-                    <div class="visualizer">
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
-                        <div class="bar"></div>
+                <h2>You Are My Sunshine</h2>
+                <p class="artist-name">For My Best Friend 💛</p>
+                <div class="album-art-container">
+                    <div class="album-art">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=500&h=500&fit=crop" alt="Best Friends" onerror="this.style.display='none'; this.parentElement.innerHTML='<div style=\'font-size: 80px\'>🤝</div>'">
+                        <div class="album-art-overlay">
+                            <div class="visualizer">
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                                <div class="bar"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="progress-container">
@@ -615,7 +884,27 @@
                     </div>
                 </div>
                 <div class="controls">
-                    <button class="control-btn" id="playPauseBtn" onclick="togglePlayPause()">▶️</button>
+                    <button class="control-btn" onclick="seekBackward()">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M11.5 12L20 18V6l-8.5 6zm-9-6v12l8.5-6L2.5 6z"/>
+                        </svg>
+                    </button>
+                    <button class="control-btn play-btn" id="playPauseBtn" onclick="togglePlayPause()">
+                        <svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor">
+                            <path d="M3 0L16 10L3 20V0Z"/>
+                        </svg>
+                    </button>
+                    <button class="control-btn" onclick="seekForward()">
+                        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M4 18V6l8.5 6L4 18zm9-12v12l8.5-6L13 6z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="volume-control">
+                    <span class="volume-icon">🔊</span>
+                    <div class="volume-slider">
+                        <div class="volume-fill"></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -788,12 +1077,7 @@
                     }
                 } else {
                     setTimeout(() => {
-                        switchSection('chat-section', 'music-section');
-                        setTimeout(() => {
-                            audio.play();
-                            updateProgress();
-                            document.getElementById('playPauseBtn').textContent = '⏸️';
-                        }, 500);
+                        switchSection('chat-section', 'pre-music-section');
                     }, 2000);
                 }
             }
@@ -809,16 +1093,48 @@
             showNextMessage();
         }
 
+        // Show music player
+        function showMusicPlayer() {
+            switchSection('pre-music-section', 'music-section');
+            setTimeout(() => {
+                audio.play();
+                updateProgress();
+                updatePlayPauseIcon(true);
+            }, 500);
+        }
+
         // Music player functions
         function togglePlayPause() {
             const btn = document.getElementById('playPauseBtn');
             if (audio.paused) {
                 audio.play();
-                btn.textContent = '⏸️';
+                updatePlayPauseIcon(true);
             } else {
                 audio.pause();
-                btn.textContent = '▶️';
+                updatePlayPauseIcon(false);
             }
+        }
+
+        function updatePlayPauseIcon(isPlaying) {
+            const btn = document.getElementById('playPauseBtn');
+            if (isPlaying) {
+                btn.innerHTML = `<svg width="16" height="20" viewBox="0 0 24 24" fill="currentColor">
+                    <rect x="6" y="4" width="4" height="16" rx="1"/>
+                    <rect x="14" y="4" width="4" height="16" rx="1"/>
+                </svg>`;
+            } else {
+                btn.innerHTML = `<svg width="16" height="20" viewBox="0 0 16 20" fill="currentColor">
+                    <path d="M3 0L16 10L3 20V0Z"/>
+                </svg>`;
+            }
+        }
+
+        function seekBackward() {
+            audio.currentTime = Math.max(0, audio.currentTime - 10);
+        }
+
+        function seekForward() {
+            audio.currentTime = Math.min(audio.duration, audio.currentTime + 10);
         }
 
         function updateProgress() {
@@ -913,7 +1229,7 @@
                 }
 
                 cardEl.addEventListener('click', () => {
-                    if (index === currentCard && window.innerWidth <= 600) {
+                    if (index === currentCard) {
                         cardEl.style.transform = 'translateX(1000px) rotate(30deg)';
                         cardEl.style.opacity = '0';
                         setTimeout(() => {
